# whydoesthecstandardnothavethesedatastructures

./: .gitignore  CMakeLists.txt  README.md
data-structures/: dynamic_array.h  hash_map.c  hash_map.h  main.c  pocket_string.h  string.h
tests/: CMakeLists.txt  test_dyn_array.c  test_hash_map.c  test_string.c
